--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: admin
-  socket: /var/run/mysqld/mysqld.sock
+  password: 
+  socket: /private/tmp/mysql.sock
 
 development:
   <<: *default
